--- a/assignment/index.html
+++ b/assignment/index.html
@@ -4,22 +4,32 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Change the <title> from "Page Title" to "Hello World" -->
-    <title>Page Title</title>
+    <title>Hello World</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <script type="text/javascript"  src=helloWorld.js> </script>
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 <body>
     <!-- Create a header element.  -->
-
+    <div class="header">
+    <h1>Superman</h1>
+      </div>
     <!-- Inside the header, add an <h1> element containing your name -->
-
+        <div class="picture">
+          <img src="https://tse3.mm.bing.net/th?id=OIP.6dA013wSa_UUnPtaLsxuXwHaDt&pid=Api&P=0&w=371&h=186">
     <!-- Include an image -->
-
+        <div>
+    <ul>
+        <li> I can shoot Lasers out of my eyes! </li>
+        <li> I can lift a truck above my head! </li>
+        <li> I come from a different planet called krypton! </li>
+    </ul>
     <!-- Create an unordered list with 3 list items of fun facts about you -->
 
+    <footer>
     <!-- Create a footer element. -->
-
+        <p> "Life is like looking for your phone, Most of the time, its in your hand."
     <!-- Inside your footer, put a <p> element with your favorite quote -->
+    </footer>
 </body>
 </html>
